  helps, though. Would appreciate it if another code looks into this. -- Syzop
- Fixed SVSO - not removing coadmin (+C). Reported by Muisje (#0003077).
- Fixed deny link {} blocks being ignored by autoconnect. Reported by a couple people,
  also see #0003084.
- Fixed m_names.so not being build (a problem for people not using commands.so),
  reported by aegis (#0003085).
- Using SVSMODE (or SVS2MODE) to set -x will now actually remove the vhost from memory,
  instead of letting it magically reappear whenever +x is set. This means services can
  now properly "unvhost" a user by sending a "SVSMODE User -x+x" (then any existing vhost
  will be removed and user will have a cloaked host). Reported by avenger and others
  (#0002933).
- [internal] Made a spamfilter_build_user_string function that will build the spamfilter
  user target string (nick!user@host:info), insteaf of doing it at like 5 places.
- Spamfilter target 'u' (user): the host field (nick!user@HOST:realname) is now escaped
  with brackets if it's an IPv6 address, eg: blah!blah@[1:2:3:4:5:6:7:8]:hello, reported
  by aquanight and others (#0003010).
- Win32: SSL private key prompt should now no longer crash. Patch provided by Alexey
  Markevich (#0002866).
- Win32: we now no longer crash if no access to write to service.log, suggested and
  patch by Xuefer (#0002886).
- Services timestamps are now always treated as an unsigned long (0..2^32-1), instead
  of accidently as signed long during netsynchs. This bug caused issues with values
  larger than 2147483647. Reported by avenger (#0002980).
- If the 'crypt' algorithm is used, then passwords were/are truncated to 8 characters.
  We now print a warning when this happens (both on the IRC command and command-line).
  Suggested by JasonTik (#0002953).
- Win32: Fixed a few compiler warnings, suggested by Zell (#0002890).
- Moved a couple isatty() calls to DEBUGMODE (#0002945).
- Made win32 compile again, reported by Bock (#0003106).